--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>MENOL - Mens Clothing</title>
 
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -74,7 +74,7 @@
           </div>
           <div class="col-6">
             <!-- <div class="hero-img">
-              <img src="/assets/images/bg2.webp" alt="">
+              <img src="assets/images/bg2.webp" alt="">
             </div> -->
           </div>
         </div>
@@ -101,7 +101,7 @@
                 </div>
               </div>
               <div class="fashion-img">
-                <img src="/assets/images/cat1.webp" alt="">
+                <img src="assets/images/cat1.webp" alt="">
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
                 </div>
               </div>
               <div class="fashion-img">
-                <img src="/assets/images/cat2.webp" alt="">
+                <img src="assets/images/cat2.webp" alt="">
               </div>
             </div>
           </div>
@@ -137,28 +137,28 @@
           <div class="slider category-box">
               <div class="slide">
                  <div class="category-box">
-                  <img src="/assets/images/t-shirts.jpg" alt="">
+                  <img src="assets/images/t-shirts.jpg" alt="">
                   <p>T-Shirt</p>
           </div>
         </div>
               <div class="slide"> <div class="category-box">
-            <img src="/assets/images/lowers.jpg" alt="">
+            <img src="assets/images/lowers.jpg" alt="">
              <p>Lowers</p>
           </div></div>
               <div class="slide"> <div class="category-box">
-            <img src="/assets/images/shirts.jpg" alt="">
+            <img src="assets/images/shirts.jpg" alt="">
              <p>Shirt</p>
           </div></div>
               <div class="slide"> <div class="category-box">
-            <img src="/assets/images/pants.jpg" alt="">
+            <img src="assets/images/pants.jpg" alt="">
              <p>Jeans</p>
           </div></div>
               <div class="slide"> <div class="category-box">
-            <img src="/assets/images/outerwear.jpg" alt="">
+            <img src="assets/images/outerwear.jpg" alt="">
              <p>Jackets</p>
           </div></div>
               <div class="slide"> <div class="category-box">
-            <img src="/assets/images/shorts.jpg" alt="">
+            <img src="assets/images/shorts.jpg" alt="">
              <p>Shorts</p>
           </div></div>
           </div>
@@ -180,7 +180,7 @@
           <!-- product -->
           <div class="product-box">
            <div class="product-detail">
-            <div class="prdt-img"><img src="/assets/images/prdt1.jpg" alt=""></div>
+            <div class="prdt-img"><img src="assets/images/prdt1.jpg" alt=""></div>
             <div class="wishlist">
               <span><i class="fa-regular fa-heart"></i></span>
             </div>
@@ -200,7 +200,7 @@
           <!-- product -->
           <div class="product-box">
            <div class="product-detail">
-            <div class="prdt-img"><img src="/assets/images/prdt2.jpg" alt=""></div>
+            <div class="prdt-img"><img src="assets/images/prdt2.jpg" alt=""></div>
             <div class="wishlist">
               <span><i class="fa-regular fa-heart"></i></span>
             </div>
@@ -220,7 +220,7 @@
           <!-- product -->
           <div class="product-box">
            <div class="product-detail">
-            <div class="prdt-img"><img src="/assets/images/prdt3.jpg" alt=""></div>
+            <div class="prdt-img"><img src="assets/images/prdt3.jpg" alt=""></div>
             <div class="wishlist">
               <span><i class="fa-regular fa-heart"></i></span>
             </div>
@@ -240,7 +240,7 @@
           <!-- product -->
           <div class="product-box">
            <div class="product-detail">
-            <div class="prdt-img"><img src="/assets/images/prdt4.jpg" alt=""></div>
+            <div class="prdt-img"><img src="assets/images/prdt4.jpg" alt=""></div>
             <div class="wishlist">
               <span><i class="fa-regular fa-heart"></i></span>
             </div>
@@ -260,7 +260,7 @@
           <!-- product -->
           <div class="product-box">
            <div class="product-detail">
-            <div class="prdt-img"><img src="/assets/images/sale1.jpg" alt=""></div>
+            <div class="prdt-img"><img src="assets/images/sale1.jpg" alt=""></div>
             <div class="wishlist">
               <span><i class="fa-regular fa-heart"></i></span>
             </div>
@@ -280,7 +280,7 @@
           <!-- product -->
           <div class="product-box">
            <div class="product-detail">
-            <div class="prdt-img"><img src="/assets/images/sale2.jpg" alt=""></div>
+            <div class="prdt-img"><img src="assets/images/sale2.jpg" alt=""></div>
             <div class="wishlist">
               <span><i class="fa-regular fa-heart"></i></span>
             </div>
@@ -322,7 +322,7 @@
           </div>
           <div class="col-6">
             <div class="edd-img">
-              <img src="/assets/images/bg1.webp" alt="">
+              <img src="assets/images/bg1.webp" alt="">
             </div>
           </div>
         </div>
@@ -335,7 +335,7 @@
             <div class="dflex">
                 <div class="cont-box">
                   <div class="cont-box-img">
-                    <img src="/assets/images/quality.png" alt="">
+                    <img src="assets/images/quality.png" alt="">
                   </div>
                   <div class="cont-box-content">
                     <h5>High Quality</h5>
@@ -344,7 +344,7 @@
                 </div>
                 <div class="cont-box">
                   <div class="cont-box-img">
-                    <img src="/assets/images/ship.png" alt="">
+                    <img src="assets/images/ship.png" alt="">
                   </div>
                   <div class="cont-box-content">
                     <h5>Free Shipping</h5>
@@ -353,7 +353,7 @@
                 </div>
                 <div class="cont-box">
                   <div class="cont-box-img">
-                    <img src="/assets/images/call.png" alt="">
+                    <img src="assets/images/call.png" alt="">
                   </div>
                   <div class="cont-box-content">
                     <h5>24 / 7 Support</h5>
@@ -375,8 +375,8 @@
         <div class="row edd-content">
           <div class="col-8">
             <div class="row clothing-img">
-              <div class="col-6"><img src="/assets/images/follow3.webp" alt=""></div>
-              <div class="col-6"><img src="/assets/images/follow7.webp" alt=""></div>
+              <div class="col-6"><img src="assets/images/follow3.webp" alt=""></div>
+              <div class="col-6"><img src="assets/images/follow7.webp" alt=""></div>
             </div>
           </div>
           <div class="col-4 p-30">
@@ -398,7 +398,7 @@
             <!-- product -->
             <div class="product-box">
              <div class="product-detail">
-              <div class="prdt-img"><img src="/assets/images/sale1.jpg" alt=""></div>
+              <div class="prdt-img"><img src="assets/images/sale1.jpg" alt=""></div>
               <div class="wishlist">
                 <span><i class="fa-regular fa-heart"></i></span>
               </div>
@@ -418,7 +418,7 @@
             <!-- product -->
             <div class="product-box">
              <div class="product-detail">
-              <div class="prdt-img"><img src="/assets/images/sale2.jpg" alt=""></div>
+              <div class="prdt-img"><img src="assets/images/sale2.jpg" alt=""></div>
               <div class="wishlist">
                 <span><i class="fa-regular fa-heart"></i></span>
               </div>
@@ -438,7 +438,7 @@
             <!-- product -->
             <div class="product-box">
              <div class="product-detail">
-              <div class="prdt-img"><img src="/assets/images/sale3.jpg" alt=""></div>
+              <div class="prdt-img"><img src="assets/images/sale3.jpg" alt=""></div>
               <div class="wishlist">
                 <span><i class="fa-regular fa-heart"></i></span>
               </div>
@@ -458,7 +458,7 @@
             <!-- product -->
             <div class="product-box">
              <div class="product-detail">
-              <div class="prdt-img"><img src="/assets/images/sale4.jpg" alt=""></div>
+              <div class="prdt-img"><img src="assets/images/sale4.jpg" alt=""></div>
               <div class="wishlist">
                 <span><i class="fa-regular fa-heart"></i></span>
               </div>
@@ -478,7 +478,7 @@
             <!-- product -->
             <div class="product-box">
              <div class="product-detail">
-              <div class="prdt-img"><img src="/assets/images/sale5.jpg" alt=""></div>
+              <div class="prdt-img"><img src="assets/images/sale5.jpg" alt=""></div>
               <div class="wishlist">
                 <span><i class="fa-regular fa-heart"></i></span>
               </div>
@@ -498,7 +498,7 @@
             <!-- product -->
             <div class="product-box">
              <div class="product-detail">
-              <div class="prdt-img"><img src="/assets/images/sale6.jpg" alt=""></div>
+              <div class="prdt-img"><img src="assets/images/sale6.jpg" alt=""></div>
               <div class="wishlist">
                 <span><i class="fa-regular fa-heart"></i></span>
               </div>
@@ -530,8 +530,8 @@
           <div class="row flex-reverse">
             <div class="col-6">
               <div class="row clothing-img contact-img">
-                <div class="col-6"><img src="/assets/images/follow2.webp" alt=""></div>
-                <div class="col-6"><img src="/assets/images/follow6.webp" alt=""></div>
+                <div class="col-6"><img src="assets/images/follow2.webp" alt=""></div>
+                <div class="col-6"><img src="assets/images/follow6.webp" alt=""></div>
               </div>
             </div>
             <div class="col-6">
@@ -572,13 +572,13 @@
       </div>
         <div class="follow-cont">
          
-          <div class="follow-img"><img src="/assets/images/follow1.webp" alt=""></div>
-          <div class="follow-img"><img src="/assets/images/follow2.webp" alt=""></div>
-          <div class="follow-img"><img src="/assets/images/follow3.webp" alt=""></div>
-          <div class="follow-img"><img src="/assets/images/follow4.webp" alt=""></div>
-          <div class="follow-img"><img src="/assets/images/follow5.webp" alt=""></div>
-          <div class="follow-img"><img src="/assets/images/follow6.webp" alt=""></div>
-          <div class="follow-img"><img src="/assets/images/follow7.webp" alt=""></div>
+          <div class="follow-img"><img src="assets/images/follow1.webp" alt=""></div>
+          <div class="follow-img"><img src="assets/images/follow2.webp" alt=""></div>
+          <div class="follow-img"><img src="assets/images/follow3.webp" alt=""></div>
+          <div class="follow-img"><img src="assets/images/follow4.webp" alt=""></div>
+          <div class="follow-img"><img src="assets/images/follow5.webp" alt=""></div>
+          <div class="follow-img"><img src="assets/images/follow6.webp" alt=""></div>
+          <div class="follow-img"><img src="assets/images/follow7.webp" alt=""></div>
         </div>
       </section>
      <!-- follow -->
@@ -615,5 +615,5 @@
 
  
   </body>
-  <script src="/assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
 </html>
